# WARDEN

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/audit/: mod.rs
src-tauri/src/commands/: audit.rs  certs.rs  config.rs  http_monitor.rs  iam.rs  inventory.rs  logs.rs  mfa.rs  mod.rs  monitoring.rs  network.rs  power.rs  scanner.rs  scripts.rs  sessions.rs  sftp.rs  sysinfo.rs  vault.rs
src-tauri/src/db/: mod.rs
src-tauri/src/iam/: mod.rs
src-tauri/src/inventory/: mod.rs
src-tauri/src/monitoring/: mod.rs
src-tauri/src/power/: mod.rs
src-tauri/src/protocols/: mod.rs  rdp.rs  sftp.rs  ssh.rs  telnet.rs
src-tauri/src/scripts/: mod.rs
src-tauri/src/vault/: mod.rs
src/components/AssetTree/: AssetTree.tsx
src/components/BulkExec/: BulkExec.tsx
src/components/CertMonitor/: CertMonitor.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/FileBrowser/: FileBrowser.tsx
src/components/Header/: Header.tsx
src/components/HttpMonitor/: HttpMonitor.tsx
src/components/Layout/: Layout.tsx
src/components/Monitoring/: MonitoringPanel.tsx
src/components/NetworkScanner/: NetworkScanner.tsx
src/components/RdpSession/: RdpSession.tsx
src/components/ScriptLibrary/: ScriptLibrary.tsx
src/components/SessionPane/: SessionPane.tsx
src/components/Sparkline/: Sparkline.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/SysInfo/: EventLogViewer.tsx  LogTail.tsx  MetricsPanel.tsx  ProcessManager.tsx  ServiceManager.tsx
src/components/Terminal/: Terminal.tsx
src/components/modals/: AboutModal.tsx  AddCredentialModal.tsx  AddMachineModal.tsx  AddProfileModal.tsx  AuditLogModal.tsx  BackupModal.tsx  CredentialManagerModal.tsx  EditMachineModal.tsx  EditProfileModal.tsx  LoginModal.tsx  Modals.tsx  MyAccountModal.tsx  NetworkShareModal.tsx  (+2 more)
src/lib/: tauri.ts
src/store/: index.ts
src/styles/: globals.css
src/types/: index.ts
